unpackaged/main/default/objects/CMPL123CME__Repair__c/CMPL123CME__Repair__c.object-meta.xml
<CustomObject>
    <description>Repair</description>
    <label>Repair</label>
    <nameField>
        <displayFormat>CR-{00000}</displayFormat>
        <label>Repair No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Repairs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>