unpackaged/main/default/objects/CMPL123CME__Repair__c/fields/CMPL123CME__Arrival_Date__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Arrival_Date__c</fullName>
        <description>Arrival Date</description>
        <label>Arrival Date</label>
        <type>Date</type>
    </CustomField>