unpackaged/main/default/objects/CMPL123CME__Repair__c/fields/CMPL123CME__Complaint__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Complaint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Complaint</description>
        <label>Complaint</label>
        <referenceTo>CMPL123CME__Complaint__c</referenceTo>
        <relationshipLabel>Repairs</relationshipLabel>
        <relationshipName>Repairs</relationshipName>
        <type>Lookup</type>
    </CustomField>