unpackaged/main/default/objects/CMPL123CME__Repair__c/fields/CMPL123CME__Repair_Description__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Repair_Description__c</fullName>
        <description>Repair Description</description>
        <label>Repair Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>