unpackaged/main/default/objects/CMPL123CME__Repair__c/fields/CMPL123CME__Repair_Type__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Repair_Type__c</fullName>
        <description>Repair Type</description>
        <label>Repair Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FIELD</fullName>
                </value>
                <value>
                    <fullName>IN HOUSE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>